gcp-migration/k8s/curl-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  namespace: eira
spec:
  restartPolicy: Never
  containers:
  - name: curl-test
    image: curlimages/curl
    command: ["sleep"]
    args: ["3600"]  # pod stays alive for 1 hour
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
