gcp-migration/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: eira
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-hc-config"}'
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
